Cross-link new chapters; fix sqlnet %{uid} bug; add ORA-28030/24247 troubleshooting
- README.md: reading-order entries for chapters 16, 17, 19; side-material
  links for RECIPE.md, AD-SETUP-TICKET.md, scripts/oracle/.
- docs/04-oracle-server-kerberos.md: remove SQLNET.KERBEROS5_CC_NAME line
  that used %{uid} substitution syntax — Oracle's sqlnet parser does not
  substitute %{uid} (that is libkrb5/sssd syntax) and the line caused the
  Kerberos adapter init to fail looking for a literally-named ccache.
  Added a callout pointing at the matching troubleshooting anchor.
- docs/15-questions-and-answers.md: two new Q&A entries — DBeaver wiki
  staleness on Kerberos (Lite/Enterprise UI vs Community manual config),
  and why this lab does not use Oracle CMU.
- troubleshooting.md: new ora-24247 entry (network ACL grant needed
  before DBMS_LDAP can connect outbound) and ora-28030 entry (CMU is
  broken in 19c — use the ad_sync pattern instead).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>