@@ -4,6 +4,30 @@ Anchored reference for every error mode the runbook in [docs/09-verification-end
 
 When debugging, the single most useful thing you can do is flip both `-Dsun.security.krb5.debug=true` and `-Dsun.security.jgss.debug=true` in `dbeaver.ini`, restart DBeaver from a PowerShell window, reproduce the failure, and read the AS-REQ / TGS-REQ / AP-REQ trace.
 
+## Quick-jump error index
+
+| Error string | Section |
+|---|---|
+| `Clock skew too great` / `KRB_AP_ERR_SKEW (37)` | [#clock-skew](#clock-skew) |
+| `Cannot resolve servers for KDC` / DNS-related | [#dns-resolution](#dns-resolution) |
+| `Server not found in Kerberos database` (KDC_ERR_S_PRINCIPAL_UNKNOWN) | [#kdc-err-s-principal-unknown](#kdc-err-s-principal-unknown) |
+| `KRB_AP_ERR_MODIFIED` | [#krb-ap-err-modified](#krb-ap-err-modified) |
+| `Encryption type ... is not supported by the server` | [#enctype-mismatch](#enctype-mismatch) |
+| `ORA-12631: NO_CRED_RECEIVED` / Username retrieval failed | [#ora-12631](#ora-12631) |
+| `ORA-12638: Credential retrieval failed` | [#ora-12638](#ora-12638) |
+| `ORA-12641: Authentication service failed to initialize` | [#ora-12641](#ora-12641) |
+| `ORA-01017: invalid username/password; logon denied` (when using Kerberos) | [#ora-01017-kerberos-fallback](#ora-01017-kerberos-fallback) |
+| `ORA-17430: Must be logged on to the server` | [#ora-17430](#ora-17430) |
+| `ORA-18923: No valid credentials provided` / `Connection refused: getsockopt` | [#ora-18923](#ora-18923) |
+| `ORA-24247: network access denied by access control list (ACL)` (from `ad_sync` package) | [#ora-24247](#ora-24247) |
+| `ORA-28030: Server encountered problems accessing LDAP directory service` | [#ora-28030](#ora-28030) |
+| `EncryptionKey: Key bytes cannot be null!` (from JDBC) | [#jdbc-encryptionkey-null](#jdbc-encryptionkey-null) |
+| `NoClassDefFoundError: oracle/security/o5logon/...` | [#jdbc-noclassdef-o5login](#jdbc-noclassdef-o5login) |
+| `cannot access class sun.security.krb5.internal.APReq ... module does not export` | [#jdbc-module-access](#jdbc-module-access) |
+| `GSS-API: Defective token detected` | [#gss-defective-token](#gss-defective-token) |
+| `TNS:no listener` / `TNS-12541` | [#tns-12541](#tns-12541) |
+| LDAPS-related (handshake fail, chain untrusted) | [#ldaps-no-cert](#ldaps-no-cert), [#ldaps-chain-untrusted](#ldaps-chain-untrusted) |
+
 ---
 
 ## clock-skew
@@ -301,6 +325,144 @@ Then re-run `.\scripts\windows\Invoke-DBeaverPrecheck.ps1`. The `LdapsChainValid
 
 For ora01-side trust failures (sssd / openssl), see [docs/11](docs/11-ldaps-cert-trust.md) section "Pinning the Root CA on each client" → "ora01 — system trust".
 
+## ora-01017-kerberos-fallback
+
+**Symptoms:**
+- `ORA-01017: invalid username/password; logon denied`
+- Connection profile has username and password **blank** (intentional, for Kerberos)
+- Stack trace shows `T4CConnection.authenticateWithPassword(...)` — driver is doing **password auth**, not Kerberos
+
+**Cause:** DBeaver's connection profile has `auth-model: oracle_os` (the "OS Authentication" option in the Authentication dropdown). With no OS-bound credentials present, the driver silently falls through to password auth with empty creds, hence ORA-01017. The `oracle.net.authentication_services=KERBEROS5` driver property is never given a chance to run.
+
+**Fix:** Right-click the connection → **Edit Connection** → Main tab. Set **Authentication** to **Database Native** (not "OS Authentication"). On disk that means changing the `data-sources.json` entry:
+```json
+"auth-model": "native"     // was: "oracle_os"
+```
+
+A secondary gotcha: if `oracle.net.authentication_services` is set to **`(KERBEROS5)`** (with parens), the JDBC driver may not recognize it and silently skip Kerberos. Use **`KERBEROS5`** without parens for JDBC driver properties. (Parens are sqlnet.ora syntax — not the same parser.)
+
+## ora-17430
+
+**Symptoms:**
+- `ORA-17430: Must be logged on to the server`
+- Stack trace ends in `assertLoggedOn`, `getVersionNumber`, `getUserName`
+- Appears as the *second* error after an upstream auth failure
+
+**Cause:** The JDBC driver did not authenticate, but a subsequent operation (often DBeaver introspecting the database after a failed `Test Connection`) tried to use the half-built `Connection` object. The `assertLoggedOn` check fires because no logon ever completed. This is a **wrapper / cascade** error, not the real failure.
+
+**Fix:** Find the actual upstream error. Look earlier in the DBeaver log (`%APPDATA%\DBeaverData\workspace6\.metadata\.log`) for the **first** error in the cascade — typically `ORA-01017` ([#ora-01017-kerberos-fallback](#ora-01017-kerberos-fallback)), `ORA-12631` ([#ora-12631](#ora-12631)), or a JDBC-layer Kerberos exception. Fix that one; this one disappears.
+
+## ora-18923
+
+**Symptoms:**
+- `ORA-18923: The service in process is not supported: No valid credentials provided`
+- `(Mechanism level: Connection refused: getsockopt)` or `(Mechanism level: Server not found in Kerberos database)`
+- Stack trace mentions `oracle.net.ano.AuthenticationService` doing GSSAPI exchange
+
+**Cause:** The JDBC driver did try Kerberos correctly, but the **KDC was unreachable** when the client tried to fetch a service ticket (TGS-REQ). Common reasons:
+- `ad1` is shut down or rebooting
+- AD DS service is still starting up after a fresh ad1 boot (port 88 doesn't accept yet)
+- VirtualBox host-only network is down on the client side
+- Firewall on `ad1` reset to "Public" profile blocking port 88
+
+**Fix:**
+```powershell
+# From the host (or wks01):
+Test-NetConnection 192.168.56.10 -Port 88
+Test-NetConnection 192.168.56.10 -Port 464
+Test-NetConnection 192.168.56.10 -Port 636
+```
+All three should return `TcpTestSucceeded: True`. If not:
+- Start ad1: `VBoxManage startvm AD-Server-DC1 --type gui`
+- Wait 30–60 sec for AD services to bind
+- Verify `Get-NetConnectionProfile` on ad1 shows the host-only NIC as `Private` or `DomainAuthenticated`, not `Public` (re-set with `Set-NetConnectionProfile -InterfaceIndex N -NetworkCategory Private`)
+
+Retry once port 88 accepts. This error is **transient** — auth completes once the KDC is reachable. No client-side changes needed.
+
+## jdbc-encryptionkey-null
+
+**Symptoms:**
+- `java.lang.IllegalArgumentException: EncryptionKey: Key bytes cannot be null!`
+- Stack trace: `EncryptionKey.<init>` → `oracle.net.ano.AuthenticationService.getKRBCredForDelegation(...)` → `AuthenticationService.run` (called via `Subject.doAs`)
+
+**Cause:** Oracle's `AuthenticationService` tries to extract **delegated credentials** from alice's TGT (to support proxy/forward scenarios) every time it's configured for Kerberos. When the JVM's Kerberos cache reader returns `null` for the session-key field — which happens with several combinations of (Java 17/21 + MIT KfW file ccache, Windows LSA cache, AES256 enctype) — `EncryptionKey`'s constructor rejects the null bytes.
+
+**Fix:** Disable mutual authentication in the connection's driver properties so delegation-cred extraction is skipped:
+```json
+"oracle.net.kerberos5_mutual_authentication": "false"
+```
+
+DBeaver path: Edit Connection → Driver properties tab → set `oracle.net.kerberos5_mutual_authentication` to `false`.
+
+Other things to try if disabling mutual auth alone doesn't fix it:
+- Add explicit driver properties so ojdbc reads the ccache directly (bypasses JVM's JAAS path):
+  ```json
+  "oracle.net.kerberos5_cc_name": "C:/Users/<you>/krb5cc",
+  "oracle.net.kerberos5_conf":    "C:/ProgramData/MIT/Kerberos5/krb5.ini"
+  ```
+  Note **forward slashes** in the paths — Oracle's property parser doesn't reliably escape backslashes.
+- Re-`kinit` with a forwardable TGT (`kinit -f alice@MYLAB.LOCAL`). Without `forwardable`, the session-key field may legitimately be absent.
+
+## jdbc-module-access
+
+**Symptoms:**
+- `class oracle.net.ano.AuthenticationService (in unnamed module ...) cannot access class sun.security.krb5.internal.APReq (in module java.security.jgss) because module java.security.jgss does not export sun.security.krb5.internal to unnamed module ...`
+
+**Cause:** Java 9+ modular system. Oracle's JDBC needs to reach into Sun's internal Kerberos packages (`sun.security.krb5.internal{,.crypto,.ccache}`) to construct AP-REQ tokens. By default these packages are **not exported** to unnamed modules (which is what jars on the classpath are).
+
+**Fix:** Add these `--add-opens` lines under `-vmargs` in `dbeaver.ini`:
+```
+--add-opens=java.security.jgss/sun.security.krb5.internal=ALL-UNNAMED
+--add-opens=java.security.jgss/sun.security.krb5.internal.crypto=ALL-UNNAMED
+--add-opens=java.security.jgss/sun.security.krb5.internal.ccache=ALL-UNNAMED
+```
+Plus the two DBeaver normally ships:
+```
+--add-opens=java.security.jgss/sun.security.jgss=ALL-UNNAMED
+--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+```
+Restart DBeaver (fully close all windows first — JVM args only re-read at startup).
+
+## tns-12541
+
+**Symptoms:**
+- `ORA-12541: TNS:no listener` from the client
+- `Test-NetConnection ora01 -Port 1521` returns `TcpTestSucceeded: False`
+
+**Cause:** The Oracle listener on `ora01` isn't running, or the database instance isn't registered with the listener.
+
+**Fix:** On `ora01` as the oracle user:
+```bash
+[ora01]$ lsnrctl status   # if nothing, then:
+[ora01]$ lsnrctl start
+
+# And the database:
+[ora01]$ export ORACLE_SID=ORCLCDB
+[ora01]$ sqlplus -S / as sysdba <<<'STARTUP; ALTER PLUGGABLE DATABASE ALL OPEN; EXIT;'
+[ora01]$ sleep 30 ; lsnrctl status   # services should now list orclpdb1
+```
+
+Common triggers for the listener+DB being down:
+- ora01 was restarted (no autostart configured by default in this lab)
+- The wall-clock jumped (e.g. NTP step); Oracle is sensitive to large time changes
+- Memory pressure on the host VirtualBox killed the instance
+
+## ora-12641
+
+**Symptoms:**
+- `ORA-12641: Authentication service failed to initialize`
+- Found in `$ORACLE_HOME/network/log/sqlnet.log` or the client trace
+- Often triggered by `sqlplus /@TNS` from Linux
+
+**Cause:** Client-side sqlnet couldn't initialize the Kerberos authentication adapter. Most common reason in this lab: `SQLNET.KERBEROS5_CC_NAME = /tmp/krb5cc_%{uid}` was set, but Oracle's sqlnet parser **does not substitute `%{uid}`** (that's a libkrb5 / sssd syntax, not an Oracle one). The result: sqlnet looks for a file literally named `/tmp/krb5cc_%{uid}` and can't find it.
+
+**Fix:** Remove the `SQLNET.KERBEROS5_CC_NAME` line from `$ORACLE_HOME/network/admin/sqlnet.ora` entirely. Sqlnet will then fall back to the `KRB5CCNAME` environment variable (or the default `/tmp/krb5cc_$(id -u)`), which is what you want.
+
+Other causes of ORA-12641:
+- `/etc/krb5.conf` missing or syntactically invalid
+- Keytab path in `SQLNET.KERBEROS5_KEYTAB` unreadable by the running OS user
+- Listener restarted while sqlnet.ora was being edited
+
 ## driver-version-mismatch
 
 **Symptoms:**
@@ -311,3 +473,45 @@ For ora01-side trust failures (sssd / openssl), see [docs/11](docs/11-ldaps-cert
 **Cause:** `ojdbc8.jar` is from one Oracle release, `oraclepki.jar` / `osdt_*.jar` from another. The classes link successfully at load time but blow up when called.
 
 **Fix:** Delete all four jars from the DBeaver driver definition, re-download as a single bundle (`ojdbc8-full.tar.gz` from Oracle's JDBC download page), re-add only those four. See [docs/07-dbeaver-oracle-driver.md](docs/07-dbeaver-oracle-driver.md) section 2.
+
+## ora-24247
+
+**Symptoms:**
+- From the `AD_SYNC.AD_SYNC` package only: `ORA-24247: network access denied by access control list (ACL)`
+- Backtrace points at `SYS.DBMS_LDAP_API_FFI` line 25, then `SYS.DBMS_LDAP` `init`, then `AD_SYNC.AD_SYNC`.
+
+**Cause:** From Oracle 12c onward, any PL/SQL package that opens an outbound network connection (DBMS_LDAP, UTL_HTTP, UTL_TCP, UTL_SMTP, …) needs an explicit ACL grant for the target host. The `AD_SYNC` package was created but no ACL was set for it on `ad1.mylab.local`.
+
+**Fix:** Run in the PDB as `SYS`:
+
+```sql
+BEGIN
+  DBMS_NETWORK_ACL_ADMIN.append_host_ace(
+    host => 'ad1.mylab.local',
+    ace  => xs$ace_type(
+              privilege_list => xs$name_list('connect','resolve'),
+              principal_name => 'AD_SYNC',
+              principal_type => xs_acl.ptype_db));
+END;
+/
+COMMIT;
+```
+
+Verify with `SELECT host, principal, privilege FROM DBA_HOST_ACES WHERE principal='AD_SYNC';` — expect rows for `connect` and `resolve`. Re-run the sync to confirm it now reaches AD. This grant is already in [scripts/oracle/ad-sync-install.sql](scripts/oracle/ad-sync-install.sql); the error usually means that script wasn't run, or was run before the `AD_SYNC` user existed.
+
+## ora-28030
+
+**Symptoms:**
+- `ORA-28030: Server encountered problems accessing LDAP directory service`
+- DBeaver dialog shows nothing more; SQL*Plus client message ends there.
+- Server-side `sqlnet.ora` trace (`TRACE_LEVEL_SERVER = SUPPORT`) shows the wallet read followed by ~1 second silence, then the error packet.
+- `tcpdump host <DC> and port 636` shows at most a single TCP connect→FIN with **no TLS Client Hello sent**.
+
+**Cause:** Oracle Centrally Managed Users (CMU) was enabled (`LDAP_DIRECTORY_ACCESS=PASSWORD` set) and the database attempted but failed to bind to AD. On **19c with Kerberos-authenticated CMU users**, this is a confirmed-broken code path — see [docs/16-cmu-19c-failure-mode.md](docs/16-cmu-19c-failure-mode.md) for the full investigation. Oracle's internal NTZ (TLS) layer closes the TCP socket ~7 ms after establishing it, before any TLS handshake, regardless of: wallet entry names (`ORACLE.SECURITY.*` vs `orclextldap*`), `LDAP_DIRECTORY_SYSAUTH` value, `dsi.ora` vs `ldap.ora` config file, SSL version forcing, or SELinux/firewall posture.
+
+**Working alternative shipped by this lab:** [docs/17-external-users-and-ad-sync.md](docs/17-external-users-and-ad-sync.md) — disable CMU (`LDAP_DIRECTORY_ACCESS=NONE`) and use the `AD_SYNC` PL/SQL package + `AFTER LOGON` trigger instead. Same end behavior for users (Kerberos auth + AD-group-driven roles), without the broken CMU code path.
+
+**Fix to make ORA-28030 stop, if you cannot/will not switch off CMU:**
+1. Confirm the failure mode by running `DBMS_LDAP.open_ssl(...)` + `simple_bind_s(...)` from PL/SQL against the same wallet — if that succeeds (rc=0 for both), the wallet/cert/network/AD-account path is good and you are definitely hitting the 19c CMU bug.
+2. Open an Oracle Support SR with: an `orasrv_*.trc` SQL*Net server trace at level SUPPORT showing the wallet read followed by silence; a `tcpdump` pcap showing the TCP-without-TLS pattern; and the `DBMS_LDAP` PL/SQL test showing the same path works at the protocol level. The bug is internal to `ntz`/`kzn` and not surfaceable by user-mode trace flags.
+3. While waiting for Oracle Support, install the `ad_sync` workaround in this repo so users can connect today: `sqlplus / as sysdba @scripts/oracle/ad-sync-install.sql`.
